crates/server/tests/snapshots/replay__libraries_list.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": [
    {
      "created_at": "2023-11-14T22:13:28Z",
      "id": "lib1",
      "kind": "movie",
      "metadata_sources": [
        "tmdb"
      ],
      "name": "Lib lib1",
      "roots": [
        "/media"
      ],
      "scan_schedule": "0 0 * * *",
      "updated_at": "2023-11-14T22:13:28Z",
      "watcher": "manual"
    }
  ],
  "status": 200
}
