crates/server/tests/snapshots/replay__library_detail.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "created_at": "[created_at]",
    "id": "[id]",
    "kind": "movie",
    "metadata_sources": [
      "tmdb"
    ],
    "name": "Lib lib1",
    "roots": [
      "/media"
    ],
    "scan_schedule": "0 0 * * *",
    "updated_at": "[updated_at]",
    "watcher": "manual"
  },
  "status": 200
}
