crates/server/tests/snapshots/replay__library_scan_state.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "error": null,
    "last_scanned_at": null,
    "library_id": "lib1",
    "progress": 0.0,
    "started_at": null,
    "status": "idle"
  },
  "status": 200
}
