crates/server/tests/snapshots/replay__library_trigger_reread.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": null,
  "status": 202
}
