crates/server/tests/snapshots/replay__library_unmatched.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "candidates": [
          {
            "confidence": 0.9,
            "label": "Alpha",
            "title": {
              "id": "m1",
              "type": "movie"
            }
          }
        ],
        "created_at": "1970-01-01T00:00:00Z",
        "id": "uf1",
        "library_id": "lib1",
        "path": "/media/unmatched.mkv",
        "updated_at": "1970-01-01T00:00:00Z"
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
