crates/server/tests/snapshots/replay__library_update.snap
---
source: crates/server/tests/replay.rs
expression: value
---
{
  "body": {
    "created_at": "[created_at]",
    "id": "[id]",
    "kind": "tv",
    "metadata_sources": [],
    "name": "Renamed Library",
    "roots": [
      "/media/renamed"
    ],
    "scan_schedule": "0 0 * * *",
    "updated_at": "[updated_at]",
    "watcher": "scheduled"
  },
  "status": 200
}
